--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
         padding: 12px;
         border-radius: 10px;
         font-size: 14px;
+        font-weight: bold;
     }
     
     button:hover {
@@ -42,6 +43,7 @@ body {
     
     .from {
         color: hsl(75, 94%, 57%);
+        font-weight: bold;
     }
     
     .avatar {
@@ -57,6 +59,7 @@ body {
     .name {
         font-size: 25px;
         margin: 0;
+        font-weight: bold;
     }
     
 }
@@ -88,6 +91,7 @@ body {
         padding: 12px;
         border-radius: 10px;
         font-size: 14px;
+        font-weight: bold;
     }
     
     button:hover {
@@ -98,6 +102,7 @@ body {
     
     .from {
         color: hsl(75, 94%, 57%);
+        font-weight: bold;
     }
     
     .avatar {
@@ -113,6 +118,7 @@ body {
     .name {
         font-size: 25px;
         margin: 0;
+        font-weight: bold;
     }
     
 }
